--- a/.github/workflows/unused-dependencies.yml
+++ b/.github/workflows/unused-dependencies.yml
@@ -1,8 +1,8 @@
 name: 'Unused Dependencies'
 on: [pull_request]
 
-permissions: 
-  contents: read 
+permissions:
+  contents: read
 
 jobs:
   unused-dependecies:
@@ -15,11 +15,10 @@ jobs:
         with:
           node-version: '18.x'
       - name: 'Run depcheck'
-        run: | 
-          npx depcheck --skip-missing --ignores="@babel/*,@commitlint/*,eslint,eslint-*,husky,mocha,concurrently,nyc,prettier"
+        run: |
+          npx depcheck --skip-missing --ignores="@babel/*,@commitlint/*,@emotion/*,eslint,eslint-*,husky,mocha,concurrently,nyc,prettier"
           echo $?
           if [[ $? == 1 ]]; then
             echo "Unused dependencies or devDependencies found"
             exit 1
           fi
-
