--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@mui/styles": "^6.1.2",
     "@primer/octicons-react": "^19.8.0",
     "@seald-io/nedb": "^4.0.2",
+    "@tanstack/react-query": "^5.59.0",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "bit-mask": "^1.0.2",
@@ -69,7 +70,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "6.26.2",
     "uuid": "^10.0.0",
-    "yargs": "^17.7.2"
+    "yargs": "^17.7.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
